--- a/p8105_hw3_mb4650.md
+++ b/p8105_hw3_mb4650.md
@@ -121,7 +121,12 @@ accel_tidy_data =
     activity_1:activity_1440,
     names_to = "minute",
     names_prefix = "activity_",
-    values_to = "activity_count")
+    values_to = "activity_count")%>%
+  mutate(
+    day = as.factor(day),
+    minute = as.numeric(minute),
+    week_day_end = ifelse(day == "Saturday" | day == "Sunday", "Weekdend", "Weekday")
+  )
 ```
 
     ## Parsed with column specification:
@@ -141,31 +146,127 @@ Table total activity for day.
 
 ``` r
 accel_tidy_data %>%
-  group_by(day) %>%
-  summarize(total_activity = sum(activity_count))%>%
-  arrange(desc(total_activity))
+    mutate(
+      day = factor(day, levels = c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"))
+    ) %>%
+   group_by(week, day) %>%
+  summarize(total_activity = sum(activity_count))
 ```
 
-    ## `summarise()` ungrouping output (override with `.groups` argument)
+    ## `summarise()` regrouping output by 'week' (override with `.groups` argument)
 
-    ## # A tibble: 7 x 2
-    ##   day       total_activity
-    ##   <chr>              <dbl>
-    ## 1 Friday          2291711.
-    ## 2 Wednesday       2129772.
-    ## 3 Thursday        2091151.
-    ## 4 Sunday          1919213 
-    ## 5 Monday          1858699.
-    ## 6 Tuesday         1799238.
-    ## 7 Saturday        1369237
+    ## # A tibble: 35 x 3
+    ## # Groups:   week [5]
+    ##     week day       total_activity
+    ##    <dbl> <fct>              <dbl>
+    ##  1     1 Monday            78828.
+    ##  2     1 Tuesday          307094.
+    ##  3     1 Wednesday        340115.
+    ##  4     1 Thursday         355924.
+    ##  5     1 Friday           480543.
+    ##  6     1 Saturday         376254 
+    ##  7     1 Sunday           631105 
+    ##  8     2 Monday           295431 
+    ##  9     2 Tuesday          423245 
+    ## 10     2 Wednesday        440962 
+    ## # … with 25 more rows
 
-From the output, I do not notice any trends in the total activity
+From the output table, I do not notice any trends in the total activity
 counts.
+
+Create plot activity over 24 hours.
 
 ``` r
 accel_tidy_data %>%
-  ggplot(aes(x = minute, y = activity_count )) +
-geom_point(aes(color = day)) 
+  ggplot(aes(x = minute, y = activity_count, color = day, group_by(day_id))) +
+  geom_line()
 ```
 
 <img src="p8105_hw3_mb4650_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
+
+From the graph we are better able to see trends. We can see that there
+are spikes in activity at certain parts of the day, specifically around
+minute 500-800 and 1200-1400.
+
+## Problem 3
+
+Load the data.
+
+``` r
+data("ny_noaa")
+```
+
+Clean the dataset.
+
+``` r
+ny_noaa_tidy = 
+  ny_noaa %>%
+    separate(
+    col = date, 
+    into = c("year", "month", "day"),
+    convert = TRUE) %>%
+  mutate(
+    tmax = as.numeric(tmax),
+    tmax = tmax/10,
+    tmin = as.numeric(tmin),
+    tmin = tmin/10
+  )
+
+count = 
+  ny_noaa_tidy %>% 
+  count(snow) %>%
+  arrange(desc(n))%>%
+  mutate(rank = min_rank(desc(n))) %>%
+  filter(rank < 4)
+```
+
+For snowfall, the most common values are 0 and NA. This makes sense
+since there is no snowfall for most of the year in NY.
+
+Create two-panel plot.
+
+``` r
+ny_noaa_tidy %>%
+  select(id, month, year, tmax) %>%
+  filter(month == 7 | month == 1) %>%
+  group_by(id, month, year)%>%
+  summarize(mean_tmax = mean(tmax, na.rm = TRUE)) %>%
+  ggplot(aes(x = year, y = mean_tmax)) + 
+  geom_point(alpha = 0.5) +
+  facet_grid(~month) +
+  theme(legend.position = "bottom")
+```
+
+    ## `summarise()` regrouping output by 'id', 'month' (override with `.groups` argument)
+
+    ## Warning: Removed 5970 rows containing missing values (geom_point).
+
+<img src="p8105_hw3_mb4650_files/figure-gfm/unnamed-chunk-11-1.png" width="90%" />
+
+The mean max temps for January appears to be lower (between -20 and 10
+C) than that of the mean max temps for July (between 20 and 40 C). We
+see an outlier around 1982 in January and another around 2005. There
+appears to be an outlier around 1988 in July.
+
+``` r
+tmax_tmin = 
+  ny_noaa_tidy %>% 
+  ggplot(aes(x = tmax, y = tmin)) + 
+  geom_smooth(se = FALSE) +
+  theme(legend.position = "bottom")
+
+snow_dens = 
+  ny_noaa_tidy %>% 
+  filter(0 < snow & snow < 100) %>% 
+  ggplot(aes(x = year, y = snow)) + 
+  geom_violin(aes(fill = year)) + 
+  theme(legend.position = "bottom")
+
+tmax_tmin + snow_dens
+```
+
+    ## `geom_smooth()` using method = 'gam' and formula 'y ~ s(x, bs = "cs")'
+
+    ## Warning: Removed 1136276 rows containing non-finite values (stat_smooth).
+
+<img src="p8105_hw3_mb4650_files/figure-gfm/unnamed-chunk-12-1.png" width="90%" />
